# tasca_3_programacio

./: .gitignore  README.md  main.py  pyproject.toml
src/: classificator.py  data.py  models.py  utils.py
src/datasets/: penguins.csv  penguins_test.csv
tests/: test_models.py  test_service.py
tests/datasets/: penguins_eval.csv
webapp/: client.py  forms.py  service.py
webapp/static/css/: form.css  main.css
webapp/templates/: base.html  index.html  penguin.html
