[tool.poetry]
name = "tasca3pinguins"
version = "0.1.0"
description = ""
authors = ["Germán <germanitxu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
flask = "^3.1.0"
requests = "^2.32.3"
flask-wtf = "^1.2.2"
bootstrap-flask = "^2.4.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
